--- a/about.html
+++ b/about.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="9.css" />
+        <meta charset="UTF-8" >
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+        <link rel="stylesheet" href="9.css" >
         <title>About</title>
 
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="preconnect" href="https://fonts.googleapis.com" >
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin >
         <link
             href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Red+Hat+Display:ital,wght@0,300;1,300&family=Spectral+SC:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
-            rel="stylesheet" />
+            rel="stylesheet" >
     </head>
     <body>
         <header>
             <nav>
-                <img class="logo" src="images/brl.png" alt="L" />
+                <img class="logo" src="images/brl.png" alt="L" >
                 <a href="index.html">HOME</a>
                 <a href="store.html">SHOP</a>
                 <a href="about.html" style="color: #ffe8c8">ABOUT</a>
@@ -86,7 +86,7 @@
                     href="https://github.com/yashovam/VSC-Recover-from-local-history"
                     >VIEW ON GITHUB</a
                 >
-                <br />
+                <br>
                 <img src="rec2.JPG" />
             </div>
         </div>
